# RoboDog_v2

./: LICENSE  README.md
STL/: Foot.stl  _overall_.stl  base_down.stl  base_up.stl  frame_leg_down.stl  frame_leg_up.stl  gear_base.stl  gear_foot.stl  gear_foot_cup.stl  gear_leg_base.stl  servo_gear.stl
sources/: CMakeLists.txt  IK.cpp  LX16a.cpp  Leg.cpp  LegV2.cpp  README.md  Utils.cpp  package.xml
sources/GCODE/: demo_1.gcode  demo_2.gcode  demo_rotate.gcode  ik_demo.gcode  test.gcode
sources/GCODE/Demo1/: 1.gcode  2.gcode  3.gcode  4.gcode
sources/Include/: GCodeController.h  IK.h  LX16a.h  Leg.h  LegV2.h  MoveParams.h  MovePrimitives.h  RobotState.h  Utils.h
sources/Misc/: 99-usb.rules
sources/Services/: RobotHW.cpp
sources/Trajectory/: GCodeController.cpp  MoveParams.cpp  MovePrimitives.cpp  RobotState.cpp
